--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-tonalio": "^5.1.5",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-svelte3": "^3.4.1",
