--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-beta.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
@@ -70,6 +72,7 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.5",
+    "svelte-fa": "^2.4.0",
     "svelte-preprocess": "^4.10.4",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
