--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "ts-node": "^10.7.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
+    "twilio": "^3.75.1",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2",
     "vitest": "^0.6.0"
