--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-beta.0",
+    "@felte/reporter-tippy": "^1.0.3",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
@@ -50,7 +51,7 @@
     "cookie": "^0.4.2",
     "cross-env": "^7.0.3",
     "date-fns": "^2.27.0",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.1",
     "eslint-config-prettier": "^8.5.0",
@@ -75,6 +76,7 @@
     "svelte-fa": "^2.4.0",
     "svelte-preprocess": "^4.10.4",
     "tailwindcss": "^3.0.23",
+    "tippy.js": "^6.3.7",
     "ts-node": "^10.7.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslib": "^2.3.1",
