--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jsdom": "^19.0.0",
     "lodash-es": "^4.17.21",
     "logrocket": "^2.2.0",
+    "nanoid": "^3.3.1",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.8",
     "postcss-cli": "^9.0.2",
