--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start:worker.watch": "nodemon --watch './temporal/lib/**/*.{ts,js}' --exec 'node --loader ts-node/esm' temporal/src/worker.ts"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.0.0-beta.0",
+    "@faker-js/faker": "^6.0.0",
     "@felte/reporter-tippy": "^1.0.3",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
@@ -34,18 +34,18 @@
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
     "@sveltejs/adapter-auto": "^1.0.0-next.33",
-    "@sveltejs/kit": "^1.0.0-next.297",
+    "@sveltejs/kit": "^1.0.0-next.298",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/svelte": "^3.0.3",
+    "@testing-library/svelte": "^3.1.0",
     "@types/cookie": "^0.4.1",
     "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "@vitest/ui": "^0.6.1",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.3",
     "c8": "^7.11.0",
     "concurrently": "^7.0.0",
     "cookie": "^0.4.2",
@@ -65,12 +65,12 @@
     "logrocket": "^2.2.0",
     "nanoid": "^3.3.1",
     "nodemon": "^2.0.15",
-    "postcss": "^8.4.8",
+    "postcss": "^8.4.11",
     "postcss-cli": "^9.0.2",
     "posthog-js": "^1.17.9",
     "prettier": "^2.4.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
-    "prisma": "^3.10.0",
+    "prisma": "^3.11.0",
     "rollup-plugin-visualizer": "^5.6.0",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.6",
@@ -90,10 +90,10 @@
   "dependencies": {
     "@felte/reporter-svelte": "^1.0.2",
     "@felte/validator-zod": "^1.0.3",
-    "@prisma/client": "^3.10.0",
+    "@prisma/client": "^3.11.0",
     "@trpc/client": "^9.20.1",
     "@trpc/server": "^9.20.1",
-    "felte": "^1.1.1",
+    "felte": "^1.1.3",
     "superjson": "^1.8.1",
     "svelte-select": "^4.4.7",
     "temporalio": "^0.19.1",
