--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.1.0",
     "@types/cookie": "^0.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
@@ -61,6 +62,7 @@
     "eslint-plugin-svelte3": "^3.4.1",
     "fuse.js": "^6.5.3",
     "jsdom": "^19.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash-es": "^4.17.21",
     "logrocket": "^2.2.0",
     "ms": "3.0.0-canary.1",
