--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,14 @@
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"strict": true,
+		"allowUnreachableCode": false,
+		"noImplicitAny": true,
+		"noImplicitOverride": true,
+		"noImplicitThis": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitReturns": true,
+		// "noUncheckedIndexedAccess": true,
+		// "exactOptionalPropertyTypes": true,
 		"paths": {
 			"$lib": [
 				"src/lib"
