--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.1.0",
     "@types/cookie": "^0.4.1",
+    "@types/iframe-resizer": "^3.5.9",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^8.3.3",
@@ -59,6 +60,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
     "fuse.js": "^6.5.3",
+    "iframe-resizer": "^4.3.2",
     "jsdom": "^19.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash-es": "^4.17.21",
