--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "vercel-build": "prisma generate && yarn run build",
-    "postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+    "v-build": "prisma generate && yarn run build",
+    "v-postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+    "v-build-all": "yarn run v-build && yarn run v-postbuild",
     "dev:temporal": "tsc --build --watch temporal/tsconfig.json",
     "build:temporal": "tsc --build temporal/tsconfig.json",
     "start:worker": "node --loader ts-node/esm temporal/src/worker.ts",
