--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
     "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "scripts": {
-    "dev:only": "svelte-kit dev",
-    "build:only": "svelte-kit build",
-    "tailwind:watch": "cross-env TAILWIND_MODE=watch cross-env NODE_ENV=development postcss src/styles/tailwind.css -o src/styles/tailwind-output.css -w",
-    "tailwind:build": "cross-env TAILWIND_MODE=build cross-env NODE_ENV=production postcss src/styles/tailwind.css -o src/styles/tailwind-output.css",
-    "dev": "concurrently \"yarn run dev:only\" \"yarn run tailwind:watch\"",
-    "build": "yarn run tailwind:build && yarn run build:only",
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json",
