--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "prettier": "^2.6.0",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "prisma": "^3.11.0",
+    "rollup-plugin-visualizer": "^5.6.0",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.6",
     "svelte-fa": "^2.4.0",
