--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0",
+    "@felte/reporter-svelte": "^1.0.3",
     "@felte/reporter-tippy": "^1.0.5",
+    "@felte/validator-zod": "^1.0.5",
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@prisma/client": "^3.11.1",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
@@ -38,6 +41,8 @@
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.1.0",
+    "@trpc/client": "^9.20.3",
+    "@trpc/server": "^9.20.3",
     "@types/cookie": "^0.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash-es": "^4.17.6",
@@ -55,6 +60,7 @@
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
+    "felte": "^1.1.5",
     "fuse.js": "^6.5.3",
     "jsdom": "^19.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -69,31 +75,24 @@
     "prettier-plugin-tailwindcss": "^0.1.8",
     "prisma": "^3.11.0",
     "rollup-plugin-visualizer": "^5.6.0",
+    "superjson": "^1.8.1",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.6",
     "svelte-fa": "^2.4.0",
     "svelte-preprocess": "^4.10.4",
+    "svelte-select": "^4.4.7",
     "tailwindcss": "^3.0.23",
+    "temporalio": "^0.19.2",
     "tippy.js": "^6.3.7",
+    "trpc-sveltekit": "^1.1.10",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "twilio": "^3.75.1",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2",
-    "vitest": "^0.7.6"
+    "vitest": "^0.7.6",
+    "zod": "^3.14.3"
   },
   "type": "module",
-  "dependencies": {
-    "@felte/reporter-svelte": "^1.0.3",
-    "@felte/validator-zod": "^1.0.5",
-    "@prisma/client": "^3.11.0",
-    "@trpc/client": "^9.20.3",
-    "@trpc/server": "^9.20.3",
-    "felte": "^1.1.4",
-    "superjson": "^1.8.1",
-    "svelte-select": "^4.4.7",
-    "temporalio": "^0.19.1",
-    "trpc-sveltekit": "^1.1.9",
-    "zod": "^3.14.2"
-  }
+  "dependencies": {}
 }
