--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
-    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/svelte": "^3.1.0",
     "@trpc/client": "^9.20.3",
     "@trpc/server": "^9.20.3",
@@ -49,7 +49,7 @@
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
-    "@vitest/ui": "^0.7.6",
+    "@vitest/ui": "^0.8.1",
     "algoliasearch": "^4.13.0",
     "autoprefixer": "^10.4.4",
     "c8": "^7.11.0",
@@ -90,7 +90,8 @@
     "twilio": "^3.75.1",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2",
-    "vitest": "^0.7.6",
+    "vitest": "^0.8.1",
+    "vitest-svelte-kit": "^0.0.6",
     "zod": "^3.14.3"
   },
   "type": "module",
