--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-svelte3": "^3.4.1",
     "felte": "^1.1.5",
     "fuse.js": "^6.5.3",
+    "jose": "^4.6.0",
     "jsdom": "^19.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash-es": "^4.17.21",
