--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "prisma": "^3.12.0",
+    "remeda": "^0.0.32",
     "rollup-plugin-visualizer": "^5.6.0",
     "superjson": "^1.8.1",
     "svelte": "^3.47.0",
