--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
 			"$components/*": ["./src/lib/components/*"],
 			"$models": ["src/lib/models/index.ts"],
 			"$models/*": ["src/lib/models/*"],
+			"$utils": ["src/lib/utils/index.ts"],
+			"$utils/*": ["src/lib/utils/*"]
 		}
 	}
 }
