--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -66,6 +66,7 @@
     "jose": "^4.6.0",
     "jsdom": "^19.0.0",
     "jsonwebtoken": "^8.5.1",
+    "just-pascal-case": "^3.0.1",
     "lodash-es": "^4.17.21",
     "logrocket": "^2.2.1",
     "ms": "3.0.0-canary.1",
@@ -76,7 +77,6 @@
     "prettier-plugin-tailwindcss": "^0.1.8",
     "prisma": "^3.12.0",
     "remeda": "^0.0.32",
-    "rollup-plugin-visualizer": "^5.6.0",
     "superjson": "^1.8.1",
     "svelecte": "^3.7.3",
     "svelte": "^3.47.0",
@@ -88,7 +88,6 @@
     "temporalio": "^0.19.2",
     "tippy.js": "^6.3.7",
     "trpc-sveltekit": "^1.2.2",
-    "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "twilio": "^3.76.1",
     "typescript": "^4.6.3",
@@ -97,6 +96,5 @@
     "vitest-svelte-kit": "^0.0.6",
     "zod": "^3.14.4"
   },
-  "type": "module",
-  "dependencies": {}
+  "type": "module"
 }
