--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "v-build": "prisma generate && yarn run build",
     "v-postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
-    "v-postbuild-new": "cp ../../.pnpm/node_modules/@prisma+engines@3.12.0-37.22b822189f46ef0dc5c5b503368d1bee01213980/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+    "v-postbuild-new": "cp ../../node_modules/.pnpm/@prisma+engines@3.12.0-37.22b822189f46ef0dc5c5b503368d1bee01213980/node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
     "v-postbuild-schema": "cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
     "v-build-all": "yarn run v-build && yarn run v-postbuild",
     "dev:temporal": "tsc --build --watch temporal/tsconfig.json",
