--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -15,7 +15,8 @@
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "v-postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
-    "v-postbuild-new": "cp ../../node_modules/.pnpm/@prisma+engines@3.12.0-37.22b822189f46ef0dc5c5b503368d1bee01213980/node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/"
+    "v-postbuild-new": "cp ../../node_modules/.pnpm/@prisma+engines@3.12.0-37.22b822189f46ef0dc5c5b503368d1bee01213980/node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+    "test": "playwright test"
   },
   "devDependencies": {
     "@cerbos/sdk": "^0.4.7",
@@ -25,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@playwright/test": "^1.21.0",
     "@prisma/client": "^3.12.0",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
     "@steeze-ui/heroicons": "^1.1.1",
