--- a/packages/site/.prettierrc
+++ b/packages/site/.prettierrc
@@ -2,5 +2,8 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "all",
-	"printWidth": 80
+	"printWidth": 80,
+	"pluginSearchDirs": [
+		"."
+	]
 }
