--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -53,6 +53,7 @@
     "chartjs-adapter-date-fns": "^2.0.0",
     "cookie": "^0.5.0",
     "date-fns": "^2.27.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
