--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -19,7 +19,8 @@
 			"$utils": ["src/lib/utils/index.ts"],
 			"$utils/*": ["src/lib/utils/*"],
 			"$routers": ["src/lib/server/trpc/routers/index.ts"],
-			"$routers/*": ["src/lib/server/trpc/routers/*"]
+			"$routers/*": ["src/lib/server/trpc/routers/*"],
+			"$environment": ["src/environment/index.ts"]
 		}
 	}
 }
