--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -28,6 +28,8 @@
     "@playwright/test": "^1.21.1",
     "@prisma/client": "^3.12.0",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
+    "@sentry/browser": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
     "@sveltejs/adapter-auto": "^1.0.0-next.34",
