--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^3.12.0",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
     "@sentry/browser": "^6.19.6",
+    "@sentry/node": "^6.19.6",
     "@sentry/tracing": "^6.19.6",
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
