--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -13,6 +13,7 @@
 		"noUncheckedIndexedAccess": true,
 		"exactOptionalPropertyTypes": true,
 		"esModuleInterop": true,
+		"sourceMap": true,
 		"paths": {
 			"$lib": ["src/lib"],
 			"$lib/*": ["src/lib/*"],
